# rename_video_files

./: .gitignore  Cargo.toml  README.md
src/: main.rs
