[package]
name = "rename_video_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
ffmpeg-next = "6.0.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tinytemplate = "1.2.1"
